--- a/Mediatorr/Views/WindowOfChat.xaml
+++ b/Mediatorr/Views/WindowOfChat.xaml
@@ -13,10 +13,7 @@
         </i:EventTrigger>
     </i:Interaction.Triggers>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
+      
         <Grid.RowDefinitions>
             <RowDefinition Height="5*"></RowDefinition>
             <RowDefinition Height="2*"></RowDefinition>
@@ -45,15 +42,11 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
-        <Grid Grid.Row="1">
-            <TextBox FontSize="18" 
-                     TextWrapping="Wrap" 
-                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                     ScrollViewer.VerticalScrollBarVisibility="Auto"
-                      Padding="10, 7, 0, 0"
-                     x:Name="TxtBxMessage" 
-                     BorderThickness="0"/>
-
+        <Grid Grid.Row="1" Background="AliceBlue">
+            <Border Grid.Row="1"  BorderThickness="2" BorderBrush="LightSeaGreen" CornerRadius="15" Padding="5">
+                <TextBox FontSize="18" TextWrapping="Wrap" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"
+                       x:Name="TxtBxMessage" BorderThickness="0"/>
+            </Border>
         </Grid>
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
